--- a/admin/static/styles.css
+++ b/admin/static/styles.css
@@ -56,7 +56,7 @@
         gap: 16px;
         align-self: stretch;
       }
-      .sidebar_box .sidebar_menu .menu_box .menu_text{
+      .sidebar_box .sidebar_menu .menu_box .menu_text_focus{
         color: #222;
         /* Font Medium */
         font-family: DM Sans;
@@ -65,4 +65,67 @@
         font-weight: 600;
         line-height: 24px; /* 150% */
       }
+      .sidebar_box .sidebar_menu .menu_box .menu_text{
+        color: #9A9A9A;
+        /* Font Medium */
+        font-family: DM Sans;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 24px; /* 150% */
+      }
+      .desktop_tablet .main{
+        display: flex;
+        min-width: 824px;
+        min-height: 720px;
+        padding-top: 10px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        flex: 1 0 0;
+        align-self: stretch;
+      }
+      .desktop_tablet .main .table{
+        display: flex;
+        min-height: 420px;
+        flex-direction: column;
+        align-items: flex-start;
+        flex: 1 0 0;
+        align-self: stretch;
+      }
+      .table_title{
+        display: flex;
+        padding-left: 0px;
+        align-items: center;
+        align-self: stretch;
+      }
+      .table_title .table_title_text{
+        flex: 1 0 0;
+        color: #222;
+        font-size: 21px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 28px; /* 133.333% */
+        letter-spacing: 2.1px;
+        text-transform: uppercase;
+      }
+      .table .table_content{
+        display: flex;
+        min-height: 420px;
+        flex-direction: column;
+        align-items: center;
+        flex: 1 0 0;
+        align-self: stretch;
+      }
+      .table .table_content .row_top{
+        display: flex;
+        min-height: 45px;
+        max-height: 50px;
+        padding: 12px 8px;
+        align-items: flex-start;
+        gap: 24px;
+        flex: 1 0 0;
+        align-self: stretch;
+      }
   }
+  
