--- a/admin/views/desk_main.ejs
+++ b/admin/views/desk_main.ejs
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>메인</title>
     <link rel="stylesheet" type="text/css" href="/styles.css">
-
 </head>
 <body>
     <div class="desktop_tablet">
@@ -20,7 +19,7 @@
                     <path d="M12 2L3 9V20C3 20.5304 3.21071 21.0391 3.58579 21.4142C3.96086 21.7893 4.46957 22 5 22H19C19.5304 22     20.0391           21.7893     20.4142 21.4142C20.7893 21.0391 21 20.5304 21 20V9L12 2Z" stroke="#222222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M9 22V12H15V22" stroke="#222222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
-                <span class="menu_text">메인</span>
+                <span class="menu_text_focus">메인</span>
               </div>
               <div class="menu_box">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -33,9 +32,9 @@
                 <span class="menu_text">예약관리</span>
               </div>
               <div class="menu_box">
-                  <div class="menu_icon">
-                    
-                  </div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                  <path d="M21.4142 20.4142C21.7893 20.0391 22 19.5304 22 19V8C22 7.46957 21.7893 6.96086 21.4142 6.58579C21.0391 6.21071 20.5304 6 20 6H11L9 3H4C3.46957 3 2.96086 3.21071 2.58579 3.58579C2.21071 3.96086 2 4.46957 2 5V19C2 19.5304 2.21071 20.0391 2.58579 20.4142C2.96086 20.7893 3.46957 21 4 21H20C20.5304 21 21.0391 20.7893 21.4142 20.4142Z" stroke="#9A9A9A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
                   <span class="menu_text">프로그램 관리</span>
               </div>
             </div>
@@ -46,102 +45,102 @@
             <div class="table_title"><span class="table_title_text">금일 예약</span></div>
             <div class="table_content">
               <div class="row_top">
-                <span  class="row_name">이름</span>
-                <span  class="row_number">휴대폰 번호</span>
-                <span  class="row_sex">성별</span>
-                <span  class="row_std">재학생</span>
-                <span  class="row_prog">프로그램</span>
-                <span  class="row_count">횟수</span>
-                <span  class="row_note">비고</span>
-                <span  class="row_date">예약 날짜</span>
-                <span  class="row_time">시간</span>
+                <span  class="row_text name">이름</span>
+                <span  class="row_text number">휴대폰 번호</span>
+                <span  class="row_text sex">성별</span>
+                <span  class="row_text std">재학생</span>
+                <span  class="row_text prog">프로그램</span>
+                <span  class="row_text count">횟수</span>
+                <span  class="row_text note">비고</span>
+                <span  class="row_text date">예약 날짜</span>
+                <span  class="row_text time">시간</span>
               </div>
               <div class="row_time"><span  class="row_time_text">17:00</span></div>
               <div class="row_box">
                 <div class="row">
-                  <span  class="row_name"></span>
-                  <span  class="row_number"></span>
-                  <span  class="row_sex"></span>
-                  <span  class="row_std"></span>
-                  <span  class="row_prog"></span>
-                  <span  class="row_count"></span>
-                  <span  class="row_note"></span>
-                  <span  class="row_date"></span>
-                  <span  class="row_time"></span>
+                  <span  class="row_text name"></span>
+                  <span  class="row_text number"></span>
+                  <span  class="row_text sex"></span>
+                  <span  class="row_text std"></span>
+                  <span  class="row_text prog"></span>
+                  <span  class="row_text count"></span>
+                  <span  class="row_text note"></span>
+                  <span  class="row_text date"></span>
+                  <span  class="row_text time"></span>
                 </div>
                 <div class="row">
-                  <span  class="row_name"></span>
-                  <span  class="row_number"></span>
-                  <span  class="row_sex"></span>
-                  <span  class="row_std"></span>
-                  <span  class="row_prog"></span>
-                  <span  class="row_count"></span>
-                  <span  class="row_note"></span>
-                  <span  class="row_date"></span>
-                  <span  class="row_time"></span>
+                  <span  class="row_text name"></span>
+                  <span  class="row_text number"></span>
+                  <span  class="row_text sex"></span>
+                  <span  class="row_text std"></span>
+                  <span  class="row_text prog"></span>
+                  <span  class="row_text count"></span>
+                  <span  class="row_text note"></span>
+                  <span  class="row_text date"></span>
+                  <span  class="row_text time"></span>
                 </div>
               </div>
               <div class="row_time"><span  class="row_time_text">17:30</span></div>
               <div class="row_box">
                 <div class="row">
-                  <span  class="row_name"></span>
-                  <span  class="row_number"></span>
-                  <span  class="row_sex"></span>
-                  <span  class="row_std"></span>
-                  <span  class="row_prog"></span>
-                  <span  class="row_count"></span>
-                  <span  class="row_note"></span>
-                  <span  class="row_date"></span>
-                  <span  class="row_time"></span>
+                  <span  class="row_text name"></span>
+                  <span  class="row_text number"></span>
+                  <span  class="row_text sex"></span>
+                  <span  class="row_text std"></span>
+                  <span  class="row_text prog"></span>
+                  <span  class="row_text count"></span>
+                  <span  class="row_text note"></span>
+                  <span  class="row_text date"></span>
+                  <span  class="row_text time"></span>
                 </div>
                 <div class="row">
-                  <span  class="row_name"></span>
-                  <span  class="row_number"></span>
-                  <span  class="row_sex"></span>
-                  <span  class="row_std"></span>
-                  <span  class="row_prog"></span>
-                  <span  class="row_count"></span>
-                  <span  class="row_note"></span>
-                  <span  class="row_date"></span>
-                  <span  class="row_time"></span>
+                  <span  class="row_text name"></span>
+                  <span  class="row_text number"></span>
+                  <span  class="row_text sex"></span>
+                  <span  class="row_text std"></span>
+                  <span  class="row_text prog"></span>
+                  <span  class="row_text count"></span>
+                  <span  class="row_text note"></span>
+                  <span  class="row_text date"></span>
+                  <span  class="row_text time"></span>
                 </div>
               </div>      
               <div class="row_time"><span  class="row_time_text">18:00</span></div>
               <div class="row_box">
                 <div class="row">
-                  <span  class="row_name"></span>
-                  <span  class="row_number"></span>
-                  <span  class="row_sex"></span>
-                  <span  class="row_std"></span>
-                  <span  class="row_prog"></span>
-                  <span  class="row_count"></span>
-                  <span  class="row_note"></span>
-                  <span  class="row_date"></span>
-                  <span  class="row_time"></span>
+                  <span  class="row_text name"></span>
+                  <span  class="row_text number"></span>
+                  <span  class="row_text sex"></span>
+                  <span  class="row_text std"></span>
+                  <span  class="row_text prog"></span>
+                  <span  class="row_text count"></span>
+                  <span  class="row_text note"></span>
+                  <span  class="row_text date"></span>
+                  <span  class="row_text time"></span>
                 </div>
                 <div class="row">
-                  <span  class="row_name"></span>
-                  <span  class="row_number"></span>
-                  <span  class="row_sex"></span>
-                  <span  class="row_std"></span>
-                  <span  class="row_prog"></span>
-                  <span  class="row_count"></span>
-                  <span  class="row_note"></span>
-                  <span  class="row_date"></span>
-                  <span  class="row_time"></span>
+                  <span  class="row_text name"></span>
+                  <span  class="row_text number"></span>
+                  <span  class="row_text sex"></span>
+                  <span  class="row_text std"></span>
+                  <span  class="row_text prog"></span>
+                  <span  class="row_text count"></span>
+                  <span  class="row_text note"></span>
+                  <span  class="row_text date"></span>
+                  <span  class="row_text time"></span>
                 </div>
               </div>
               <div class="row_time"><span  class="row_time_text">18:30</span></div>
               <div class="row">
-                  <span  class="row_name"></span>
-                  <span  class="row_number"></span>
-                  <span  class="row_sex"></span>
-                  <span  class="row_std"></span>
-                  <span  class="row_prog"></span>
-                  <span  class="row_count"></span>
-                  <span  class="row_note"></span>
-                  <span  class="row_date"></span>
-                  <span  class="row_time"></span>
+                  <span  class="row_text name"></span>
+                  <span  class="row_text number"></span>
+                  <span  class="row_text sex"></span>
+                  <span  class="row_text std"></span>
+                  <span  class="row_text prog"></span>
+                  <span  class="row_text count"></span>
+                  <span  class="row_text note"></span>
+                  <span  class="row_text date"></span>
+                  <span  class="row_text time"></span>
                 </div>
             </div>
           </div>
@@ -149,103 +148,103 @@
             <div class="table_title"><span class="table_title_text">익일 예약</span></div>
             <div class="table_content">
               <div class="row_top">
-                <span  class="row_name">이름</span>
-                <span  class="row_number">휴대폰 번호</span>
-                <span  class="row_sex">성별</span>
-                <span  class="row_std">재학생</span>
-                <span  class="row_prog">프로그램</span>
-                <span  class="row_count">횟수</span>
-                <span  class="row_note">비고</span>
-                <span  class="row_date">예약 날짜</span>
-                <span  class="row_time">시간</span>
+                <span  class="row_text name">이름</span>
+                <span  class="row_text number">휴대폰 번호</span>
+                <span  class="row_text sex">성별</span>
+                <span  class="row_text std">재학생</span>
+                <span  class="row_text prog">프로그램</span>
+                <span  class="row_text count">횟수</span>
+                <span  class="row_text note">비고</span>
+                <span  class="row_text date">예약 날짜</span>
+                <span  class="row_text time">시간</span>
               </div>
               <div class="row_time"><span  class="row_time_text">17:00</span></div>
               <div class="row_box">
                 <div class="row">
-                  <span  class="row_name"></span>
-                  <span  class="row_number"></span>
-                  <span  class="row_sex"></span>
-                  <span  class="row_std"></span>
-                  <span  class="row_prog"></span>
-                  <span  class="row_count"></span>
-                  <span  class="row_note"></span>
-                  <span  class="row_date"></span>
-                  <span  class="row_time"></span>
+                  <span  class="row_text name"></span>
+                  <span  class="row_text number"></span>
+                  <span  class="row_text sex"></span>
+                  <span  class="row_text std"></span>
+                  <span  class="row_text prog"></span>
+                  <span  class="row_text count"></span>
+                  <span  class="row_text note"></span>
+                  <span  class="row_text date"></span>
+                  <span  class="row_text time"></span>
                 </div>
                 <div class="row">
-                  <span  class="row_name"></span>
-                  <span  class="row_number"></span>
-                  <span  class="row_sex"></span>
-                  <span  class="row_std"></span>
-                  <span  class="row_prog"></span>
-                  <span  class="row_count"></span>
-                  <span  class="row_note"></span>
-                  <span  class="row_date"></span>
-                  <span  class="row_time"></span>
+                  <span  class="row_text name"></span>
+                  <span  class="row_text number"></span>
+                  <span  class="row_text sex"></span>
+                  <span  class="row_text std"></span>
+                  <span  class="row_text prog"></span>
+                  <span  class="row_text count"></span>
+                  <span  class="row_text note"></span>
+                  <span  class="row_text date"></span>
+                  <span  class="row_text time"></span>
                 </div>
               </div>
               <div class="row_time"><span  class="row_time_text">17:30</span></div>
               <div class="row_box">
                 <div class="row">
-                  <span  class="row_name"></span>
-                  <span  class="row_number"></span>
-                  <span  class="row_sex"></span>
-                  <span  class="row_std"></span>
-                  <span  class="row_prog"></span>
-                  <span  class="row_count"></span>
-                  <span  class="row_note"></span>
-                  <span  class="row_date"></span>
-                  <span  class="row_time"></span>
+                  <span  class="row_text name"></span>
+                  <span  class="row_text number"></span>
+                  <span  class="row_text sex"></span>
+                  <span  class="row_text std"></span>
+                  <span  class="row_text prog"></span>
+                  <span  class="row_text count"></span>
+                  <span  class="row_text note"></span>
+                  <span  class="row_text date"></span>
+                  <span  class="row_text time"></span>
                 </div>
                 <div class="row">
-                  <span  class="row_name"></span>
-                  <span  class="row_number"></span>
-                  <span  class="row_sex"></span>
-                  <span  class="row_std"></span>
-                  <span  class="row_prog"></span>
-                  <span  class="row_count"></span>
-                  <span  class="row_note"></span>
-                  <span  class="row_date"></span>
-                  <span  class="row_time"></span>
+                  <span  class="row_text name"></span>
+                  <span  class="row_text number"></span>
+                  <span  class="row_text sex"></span>
+                  <span  class="row_text std"></span>
+                  <span  class="row_text prog"></span>
+                  <span  class="row_text count"></span>
+                  <span  class="row_text note"></span>
+                  <span  class="row_text date"></span>
+                  <span  class="row_text time"></span>
                 </div>
               </div>      
               <div class="row_time"><span  class="row_time_text">18:00</span></div>
               <div class="row_box">
                 <div class="row">
-                  <span  class="row_name"></span>
-                  <span  class="row_number"></span>
-                  <span  class="row_sex"></span>
-                  <span  class="row_std"></span>
-                  <span  class="row_prog"></span>
-                  <span  class="row_count"></span>
-                  <span  class="row_note"></span>
-                  <span  class="row_date"></span>
-                  <span  class="row_time"></span>
+                  <span  class="row_text name"></span>
+                  <span  class="row_text number"></span>
+                  <span  class="row_text sex"></span>
+                  <span  class="row_text std"></span>
+                  <span  class="row_text prog"></span>
+                  <span  class="row_text count"></span>
+                  <span  class="row_text note"></span>
+                  <span  class="row_text date"></span>
+                  <span  class="row_text time"></span>
                 </div>
                 <div class="row">
-                  <span  class="row_name"></span>
-                  <span  class="row_number"></span>
-                  <span  class="row_sex"></span>
-                  <span  class="row_std"></span>
-                  <span  class="row_prog"></span>
-                  <span  class="row_count"></span>
-                  <span  class="row_note"></span>
-                  <span  class="row_date"></span>
-                  <span  class="row_time"></span>
+                  <span  class="row_text name"></span>
+                  <span  class="row_text number"></span>
+                  <span  class="row_text sex"></span>
+                  <span  class="row_text std"></span>
+                  <span  class="row_text prog"></span>
+                  <span  class="row_text count"></span>
+                  <span  class="row_text note"></span>
+                  <span  class="row_text date"></span>
+                  <span  class="row_text time"></span>
                 </div>
               </div>
               <div class="row_time"><span  class="row_time_text">18:30</span></div>
               <div class="row">
-                  <span  class="row_name"></span>
-                  <span  class="row_number"></span>
-                  <span  class="row_sex"></span>
-                  <span  class="row_std"></span>
-                  <span  class="row_prog"></span>
-                  <span  class="row_count"></span>
-                  <span  class="row_note"></span>
-                  <span  class="row_date"></span>
-                  <span  class="row_time"></span>
-                </div>
+                <span  class="row_text name"></span>
+                <span  class="row_text number"></span>
+                <span  class="row_text sex"></span>
+                <span  class="row_text std"></span>
+                <span  class="row_text prog"></span>
+                <span  class="row_text count"></span>
+                <span  class="row_text note"></span>
+                <span  class="row_text date"></span>
+                <span  class="row_text time"></span>
+              </div>
             </div>
           </div>
         </div>
