--- a/admin/views/desk_main.ejs
+++ b/admin/views/desk_main.ejs
@@ -57,7 +57,7 @@
               </div>
               <div class="row_time"><span  class="row_time_text">17:00</span></div>
               <div class="row_box">
-                <div class="row">
+                <div class="row1">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -68,7 +68,7 @@
                   <span  class="row_text date"></span>
                   <span  class="row_text time"></span>
                 </div>
-                <div class="row">
+                <div class="row2">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -82,7 +82,7 @@
               </div>
               <div class="row_time"><span  class="row_time_text">17:30</span></div>
               <div class="row_box">
-                <div class="row">
+                <div class="row1">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -93,7 +93,7 @@
                   <span  class="row_text date"></span>
                   <span  class="row_text time"></span>
                 </div>
-                <div class="row">
+                <div class="row2">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -107,7 +107,7 @@
               </div>      
               <div class="row_time"><span  class="row_time_text">18:00</span></div>
               <div class="row_box">
-                <div class="row">
+                <div class="row1">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -118,7 +118,7 @@
                   <span  class="row_text date"></span>
                   <span  class="row_text time"></span>
                 </div>
-                <div class="row">
+                <div class="row2">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -131,7 +131,7 @@
                 </div>
               </div>
               <div class="row_time"><span  class="row_time_text">18:30</span></div>
-              <div class="row">
+              <div class="row1">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -160,7 +160,7 @@
               </div>
               <div class="row_time"><span  class="row_time_text">17:00</span></div>
               <div class="row_box">
-                <div class="row">
+                <div class="row1">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -171,7 +171,7 @@
                   <span  class="row_text date"></span>
                   <span  class="row_text time"></span>
                 </div>
-                <div class="row">
+                <div class="row2">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -185,7 +185,7 @@
               </div>
               <div class="row_time"><span  class="row_time_text">17:30</span></div>
               <div class="row_box">
-                <div class="row">
+                <div class="row1">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -196,7 +196,7 @@
                   <span  class="row_text date"></span>
                   <span  class="row_text time"></span>
                 </div>
-                <div class="row">
+                <div class="row2">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -210,7 +210,7 @@
               </div>      
               <div class="row_time"><span  class="row_time_text">18:00</span></div>
               <div class="row_box">
-                <div class="row">
+                <div class="row1">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -221,7 +221,7 @@
                   <span  class="row_text date"></span>
                   <span  class="row_text time"></span>
                 </div>
-                <div class="row">
+                <div class="row2">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -234,7 +234,7 @@
                 </div>
               </div>
               <div class="row_time"><span  class="row_time_text">18:30</span></div>
-              <div class="row">
+              <div class="row1">
                 <span  class="row_text name"></span>
                 <span  class="row_text number"></span>
                 <span  class="row_text sex"></span>
