--- a/admin/static/styles.css
+++ b/admin/static/styles.css
@@ -16,8 +16,6 @@
         flex-shrink: 0;
         align-self: stretch;
         background: #FFFED8;
-        /* Shadow */
-        box-shadow: 4px 0px 10px 0px rgba(42, 46, 52, 0.20);
       }
       .sidebar .sidebar_box{
         display: flex;
@@ -95,7 +93,7 @@
       }
       .table_title{
         display: flex;
-        padding-left: 0px;
+        padding-left: 10px;
         align-items: center;
         align-self: stretch;
       }
@@ -122,10 +120,99 @@
         min-height: 45px;
         max-height: 50px;
         padding: 12px 8px;
-        align-items: flex-start;
+        align-items: center;
         gap: 24px;
         flex: 1 0 0;
         align-self: stretch;
+      }
+      .row_top .row_text{
+        color: #000;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 140%; /* 22.4px */
+        text-transform: capitalize;
+      }
+      .row_top .row_text.name{
+        width: 49px;
+      }
+      .row_top .row_text.number{
+        flex: 1 0 0;
+        min-width: 50px;
+      }
+      .row_top .row_text.sex{
+        width: 38px;
+      }
+      .row_top .row_text.std{
+        flex: 1 0 0;
+        min-width: 50px;
+      }
+      .row_top .row_text.prog{
+        flex: 1 0 0;
+      }
+      .row_top .row_text.count{
+        width: 38px;
+      }
+      .row_top .row_text.note{
+        min-width: 150px;
+        flex: 1 0 0;
+      }
+      .row_top .row_text.date{
+        flex: 1 0 0;
+      }
+      .row_top .row_text.time{
+        width: 100px;
+      }
+      .table_content .row_time{
+        display: flex;
+        height: 20px;
+        padding: 0px 8px;
+        align-items: center;
+        align-self: stretch;
+        border: 1px solid #000;
+        background: #FFF;
+        box-shadow: 0px -1px 0px 0px #E5E5E5 inset;
+      }
+      .table_content .row_time .row_time_text{
+        display: flex;
+        width: 30px;
+        flex-direction: column;
+        justify-content: center;
+        align-self: stretch;
+        color: #000;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 140%; /* 14px */
+        text-transform: capitalize;
+      }
+      .table_content .row_box{
+        display: flex;
+        min-height: 80px;
+        max-height: 100px;
+        flex-direction: column;
+        align-items: center;
+        align-self: stretch;
+      }
+      .row_box .row1{
+        display: flex;
+        min-height: 40px;
+        max-height: 50px;
+        padding: 5px 5px;
+        align-items: center;
+        gap: 24px;
+        align-self: stretch;
+        background: #FFF;
+      }
+      .row_box .row2{
+        display: flex;
+        min-height: 40px;
+        height: 50px;
+        padding: 5px 5px;
+        align-items: center;
+        gap: 24px;
+        align-self: stretch;
+        background: #E9EAEC;
       }
   }
   
