--- a/admin/views/desk_main.ejs
+++ b/admin/views/desk_main.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
-    <div class="desktop_tablet">
+    <div class="desktop">
         <div class="sidebar">
           <div class="sidebar_box">
             <div class="sidebar_title">
@@ -20,6 +20,12 @@
                     <path d="M9 22V12H15V22" stroke="#222222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
                 <span class="menu_text_focus">메인</span>
+              </div>
+              <div class="menu_box">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                  <path d="M12 0C8.7 0 6 3.36 6 7.5C6 11.64 8.7 15 12 15C15.3 15 18 11.64 18 7.5C18 3.36 15.3 0 12 0ZM5.73 15C2.55 15.15 0 17.76 0 21V24H24V21C24 17.76 21.48 15.15 18.27 15C16.65 16.83 14.43 18 12 18C9.57 18 7.35 16.83 5.73 15Z" fill="#9A9A9A"/>
+                </svg>
+                <span class="menu_text">회원목록</span>
               </div>
               <div class="menu_box">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -42,8 +48,8 @@
         </div>
         <div class="main">
           <div class="table">
-            <div class="table_title"><span class="table_title_text">금일 예약</span></div>
             <div class="table_content">
+              <div class="table_title"><span class="table_title_text">금일 예약</span></div>
               <div class="row_top">
                 <span  class="row_text name">이름</span>
                 <span  class="row_text number">휴대폰 번호</span>
@@ -132,21 +138,17 @@
               </div>
               <div class="row_time"><span  class="row_time_text">18:30</span></div>
               <div class="row1">
-                  <span  class="row_text name"></span>
-                  <span  class="row_text number"></span>
-                  <span  class="row_text sex"></span>
-                  <span  class="row_text std"></span>
-                  <span  class="row_text prog"></span>
-                  <span  class="row_text count"></span>
-                  <span  class="row_text note"></span>
-                  <span  class="row_text date"></span>
-                  <span  class="row_text time"></span>
-                </div>
-            </div>
-          </div>
-          <div class="table">
-            <div class="table_title"><span class="table_title_text">익일 예약</span></div>
-            <div class="table_content">
+                <span  class="row_text name">김신희</span>
+                <span  class="row_text number">01022389960</span>
+                <span  class="row_text sex">남성</span>
+                <span  class="row_text std">0</span>
+                <span  class="row_text prog">데콜테</span>
+                <span  class="row_text count">2/3회</span>
+                <span  class="row_text note">없음</span>
+                <span  class="row_text date">09.26.18:30</span>
+                <span  class="row_text time">18:30~19:30</span>
+              </div>
+              <div class="table_title"><span class="table_title_text">익일 예약</span></div>
               <div class="row_top">
                 <span  class="row_text name">이름</span>
                 <span  class="row_text number">휴대폰 번호</span>
@@ -248,6 +250,9 @@
             </div>
           </div>
         </div>
-      </div>    
+    </div>
+    <div class="tablet">
+      
+    </div>    
 </body>
 </html>
