--- a/admin/views/desk_main.ejs
+++ b/admin/views/desk_main.ejs
@@ -19,7 +19,7 @@
                     <path d="M12 2L3 9V20C3 20.5304 3.21071 21.0391 3.58579 21.4142C3.96086 21.7893 4.46957 22 5 22H19C19.5304 22     20.0391           21.7893     20.4142 21.4142C20.7893 21.0391 21 20.5304 21 20V9L12 2Z" stroke="#222222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M9 22V12H15V22" stroke="#222222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
-                <span class="menu_text_focus">메인</span>
+                <span class="menu_text focus">메인</span>
               </div>
               <div class="menu_box">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -148,6 +148,9 @@
                 <span  class="row_text date">09.26.18:30</span>
                 <span  class="row_text time">18:30~19:30</span>
               </div>
+
+            </div>
+            <div class="table_content">
               <div class="table_title"><span class="table_title_text">익일 예약</span></div>
               <div class="row_top">
                 <span  class="row_text name">이름</span>
@@ -237,22 +240,114 @@
               </div>
               <div class="row_time"><span  class="row_time_text">18:30</span></div>
               <div class="row1">
-                <span  class="row_text name"></span>
-                <span  class="row_text number"></span>
-                <span  class="row_text sex"></span>
-                <span  class="row_text std"></span>
-                <span  class="row_text prog"></span>
-                <span  class="row_text count"></span>
-                <span  class="row_text note"></span>
-                <span  class="row_text date"></span>
-                <span  class="row_text time"></span>
+                <span  class="row_text name">김신희</span>
+                <span  class="row_text number">01022389960</span>
+                <span  class="row_text sex">남성</span>
+                <span  class="row_text std">0</span>
+                <span  class="row_text prog">데콜테</span>
+                <span  class="row_text count">2/3회</span>
+                <span  class="row_text note">없음</span>
+                <span  class="row_text date">09.26.18:30</span>
+                <span  class="row_text time">18:30~19:30</span>
               </div>
             </div>
           </div>
         </div>
     </div>
+    <!--PC end-->
+    <!--테블릿-->
     <div class="tablet">
+      <div class="header">
+        <span class="header_text">Lemon Tree</span>        
+      </div>
+      <div class="menu_bar">
+        <div class="main"><span class="menu_text focus">메인</span></div>
+        <div class="client_list"><span class="menu_text">회원목록</span></div>
+        <div class="reserv_manage"><span class="menu_text">예약관리</span></div>
+        <div class="prog_manage"><span class="menu_text">프로그램관리</span></div>
+      </div>
+      <div class="table">
+        <div class="row_top">
+          <span  class="row_text name">이름</span>
+          <span  class="row_text number">휴대폰 번호</span>
+          <span  class="row_text prog">프로그램</span>
+          <span  class="row_text count">횟수</span>
+          <span  class="row_text date">예약 날짜</span>
+          <span  class="row_text time">시간</span>
+        </div>
+        <div class="table_content">
+          <div class="row_time"><span  class="row_time_text">17:00</span></div>
+          <div class="row_box">
+            <div class="row a">
+              <span  class="row_text name">범진성</span>
+              <span  class="row_text number">010-0000-0000</span>
+              <span  class="row_text prog">얼굴 & 데콜테관리 (60min)</span>
+              <span  class="row_text count">3회/3회</span>
+              <span  class="row_text date">2023.09.18 17:00</span>
+              <span  class="row_text time">17:00~18:00</span>
+            </div>
+            <div class="row b">
+              <span  class="row_text name"></span>
+              <span  class="row_text number"></span>
+              <span  class="row_text prog"></span>
+              <span  class="row_text count"></span>
+              <span  class="row_text date"></span>
+              <span  class="row_text time"></span>
+            </div>
+          </div>
+          <div class="row_time"><span  class="row_time_text">17:30</span></div>
+          <div class="row_box">
+            <div class="row a">
+              <span  class="row_text name"></span>
+              <span  class="row_text number"></span>
+              <span  class="row_text prog"></span>
+              <span  class="row_text count"></span>
+              <span  class="row_text date"></span>
+              <span  class="row_text time"></span>
+            </div>
+            <div class="row b">
+              <span  class="row_text name"></span>
+              <span  class="row_text number"></span>
+              <span  class="row_text prog"></span>
+              <span  class="row_text count"></span>
+              <span  class="row_text date"></span>
+              <span  class="row_text time"></span>
+            </div>
+          </div>
+          <div class="row_time"><span  class="row_time_text">18:00</span></div>
+          <div class="row_box">
+            <div class="row a">
+              <span  class="row_text name"></span>
+              <span  class="row_text number"></span>
+              <span  class="row_text prog"></span>
+              <span  class="row_text count"></span>
+              <span  class="row_text date"></span>
+              <span  class="row_text time"></span>
+            </div>
+            <div class="row b">
+              <span  class="row_text name"></span>
+              <span  class="row_text number"></span>
+              <span  class="row_text prog"></span>
+              <span  class="row_text count"></span>
+              <span  class="row_text date"></span>
+              <span  class="row_text time"></span>
+            </div>
+          </div>
+          <div class="row_time"><span  class="row_time_text">18:30</span></div>
+            <div class="row a">
+              <span  class="row_text name"></span>
+              <span  class="row_text number"></span>
+              <span  class="row_text prog"></span>
+              <span  class="row_text count"></span>
+              <span  class="row_text date"></span>
+              <span  class="row_text time"></span>
+            </div>
+        </div>
+      </div>
+    </div>   
+    <!--테블릿 end--> 
+    <div class="mobile">
       
-    </div>    
+    </div> 
 </body>
 </html>
