--- a/admin/views/desk_main.ejs
+++ b/admin/views/desk_main.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
-    <div class="desktop">
+    <div class="manage_main">
         <div class="sidebar">
           <div class="sidebar_box">
             <div class="sidebar_title">
@@ -46,9 +46,18 @@
             </div>
           </div>
         </div>
+        <div class="header">
+          <span class="header_text">Lemon Tree</span>        
+        </div>
+        <div class="menu_bar">
+          <div class="main_page"><span class="menu_text focus">메인</span></div>
+          <div class="client_list"><span class="menu_text">회원목록</span></div>
+          <div class="reserv_manage"><span class="menu_text">예약관리</span></div>
+          <div class="prog_manage"><span class="menu_text">프로그램관리</span></div>
+        </div>
         <div class="main">
           <div class="table">
-            <div class="table_content">
+            <div class="table_content a">
               <div class="table_title"><span class="table_title_text">금일 예약</span></div>
               <div class="row_top">
                 <span  class="row_text name">이름</span>
@@ -63,7 +72,7 @@
               </div>
               <div class="row_time"><span  class="row_time_text">17:00</span></div>
               <div class="row_box">
-                <div class="row1">
+                <div class="row a">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -74,7 +83,7 @@
                   <span  class="row_text date"></span>
                   <span  class="row_text time"></span>
                 </div>
-                <div class="row2">
+                <div class="row b">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -88,7 +97,7 @@
               </div>
               <div class="row_time"><span  class="row_time_text">17:30</span></div>
               <div class="row_box">
-                <div class="row1">
+                <div class="row a">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -99,7 +108,7 @@
                   <span  class="row_text date"></span>
                   <span  class="row_text time"></span>
                 </div>
-                <div class="row2">
+                <div class="row b">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -113,7 +122,7 @@
               </div>      
               <div class="row_time"><span  class="row_time_text">18:00</span></div>
               <div class="row_box">
-                <div class="row1">
+                <div class="row a">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -124,7 +133,7 @@
                   <span  class="row_text date"></span>
                   <span  class="row_text time"></span>
                 </div>
-                <div class="row2">
+                <div class="row b">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -137,7 +146,7 @@
                 </div>
               </div>
               <div class="row_time"><span  class="row_time_text">18:30</span></div>
-              <div class="row1">
+              <div class="row a">
                 <span  class="row_text name">김신희</span>
                 <span  class="row_text number">01022389960</span>
                 <span  class="row_text sex">남성</span>
@@ -148,9 +157,8 @@
                 <span  class="row_text date">09.26.18:30</span>
                 <span  class="row_text time">18:30~19:30</span>
               </div>
-
             </div>
-            <div class="table_content">
+            <div class="table_content b">
               <div class="table_title"><span class="table_title_text">익일 예약</span></div>
               <div class="row_top">
                 <span  class="row_text name">이름</span>
@@ -165,7 +173,7 @@
               </div>
               <div class="row_time"><span  class="row_time_text">17:00</span></div>
               <div class="row_box">
-                <div class="row1">
+                <div class="row a">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -176,7 +184,7 @@
                   <span  class="row_text date"></span>
                   <span  class="row_text time"></span>
                 </div>
-                <div class="row2">
+                <div class="row b">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -190,7 +198,7 @@
               </div>
               <div class="row_time"><span  class="row_time_text">17:30</span></div>
               <div class="row_box">
-                <div class="row1">
+                <div class="row a">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -201,7 +209,7 @@
                   <span  class="row_text date"></span>
                   <span  class="row_text time"></span>
                 </div>
-                <div class="row2">
+                <div class="row b">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -215,7 +223,7 @@
               </div>      
               <div class="row_time"><span  class="row_time_text">18:00</span></div>
               <div class="row_box">
-                <div class="row1">
+                <div class="row a">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -226,7 +234,7 @@
                   <span  class="row_text date"></span>
                   <span  class="row_text time"></span>
                 </div>
-                <div class="row2">
+                <div class="row b">
                   <span  class="row_text name"></span>
                   <span  class="row_text number"></span>
                   <span  class="row_text sex"></span>
@@ -239,7 +247,7 @@
                 </div>
               </div>
               <div class="row_time"><span  class="row_time_text">18:30</span></div>
-              <div class="row1">
+              <div class="row a">
                 <span  class="row_text name">김신희</span>
                 <span  class="row_text number">01022389960</span>
                 <span  class="row_text sex">남성</span>
@@ -254,100 +262,5 @@
           </div>
         </div>
     </div>
-    <!--PC end-->
-    <!--테블릿-->
-    <div class="tablet">
-      <div class="header">
-        <span class="header_text">Lemon Tree</span>        
-      </div>
-      <div class="menu_bar">
-        <div class="main"><span class="menu_text focus">메인</span></div>
-        <div class="client_list"><span class="menu_text">회원목록</span></div>
-        <div class="reserv_manage"><span class="menu_text">예약관리</span></div>
-        <div class="prog_manage"><span class="menu_text">프로그램관리</span></div>
-      </div>
-      <div class="table">
-        <div class="row_top">
-          <span  class="row_text name">이름</span>
-          <span  class="row_text number">휴대폰 번호</span>
-          <span  class="row_text prog">프로그램</span>
-          <span  class="row_text count">횟수</span>
-          <span  class="row_text date">예약 날짜</span>
-          <span  class="row_text time">시간</span>
-        </div>
-        <div class="table_content">
-          <div class="row_time"><span  class="row_time_text">17:00</span></div>
-          <div class="row_box">
-            <div class="row a">
-              <span  class="row_text name">범진성</span>
-              <span  class="row_text number">010-0000-0000</span>
-              <span  class="row_text prog">얼굴 & 데콜테관리 (60min)</span>
-              <span  class="row_text count">3회/3회</span>
-              <span  class="row_text date">2023.09.18 17:00</span>
-              <span  class="row_text time">17:00~18:00</span>
-            </div>
-            <div class="row b">
-              <span  class="row_text name"></span>
-              <span  class="row_text number"></span>
-              <span  class="row_text prog"></span>
-              <span  class="row_text count"></span>
-              <span  class="row_text date"></span>
-              <span  class="row_text time"></span>
-            </div>
-          </div>
-          <div class="row_time"><span  class="row_time_text">17:30</span></div>
-          <div class="row_box">
-            <div class="row a">
-              <span  class="row_text name"></span>
-              <span  class="row_text number"></span>
-              <span  class="row_text prog"></span>
-              <span  class="row_text count"></span>
-              <span  class="row_text date"></span>
-              <span  class="row_text time"></span>
-            </div>
-            <div class="row b">
-              <span  class="row_text name"></span>
-              <span  class="row_text number"></span>
-              <span  class="row_text prog"></span>
-              <span  class="row_text count"></span>
-              <span  class="row_text date"></span>
-              <span  class="row_text time"></span>
-            </div>
-          </div>
-          <div class="row_time"><span  class="row_time_text">18:00</span></div>
-          <div class="row_box">
-            <div class="row a">
-              <span  class="row_text name"></span>
-              <span  class="row_text number"></span>
-              <span  class="row_text prog"></span>
-              <span  class="row_text count"></span>
-              <span  class="row_text date"></span>
-              <span  class="row_text time"></span>
-            </div>
-            <div class="row b">
-              <span  class="row_text name"></span>
-              <span  class="row_text number"></span>
-              <span  class="row_text prog"></span>
-              <span  class="row_text count"></span>
-              <span  class="row_text date"></span>
-              <span  class="row_text time"></span>
-            </div>
-          </div>
-          <div class="row_time"><span  class="row_time_text">18:30</span></div>
-            <div class="row a">
-              <span  class="row_text name"></span>
-              <span  class="row_text number"></span>
-              <span  class="row_text prog"></span>
-              <span  class="row_text count"></span>
-              <span  class="row_text date"></span>
-              <span  class="row_text time"></span>
-            </div>
-        </div>
-      </div>
-    </div>   
-    <!--테블릿 end--> 
-    <div class="mobile">
-      
-    </div> 
 </body>
 </html>
